--- a/FilePortalSync2/App.config
+++ b/FilePortalSync2/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="FilePortalSync2.My.MySettings.fileportalConnectionString"
+            connectionString="Data Source=SVR-LICENSES;Initial Catalog=fileportal;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
